# pulumi-outscale

./: .ci-mgmt.yaml  .gitignore  .golangci.yml  .goreleaser.yaml  .upgrade-config.yml  Makefile  README.md  build.sh  local_tests.sh  mise.toml  pulumi-outscale.sln
.devcontainer/: Dockerfile
.osc-patch/: patch.go
deployment-templates/: .goreleaser.yml
docs/: _index.md  contributing.md  developement.md  installation-configuration.md
examples/: README.md  examples_dotnet_test.go  examples_go_test.go  examples_test.go  (+4 more)
sdk/python/: Pulumi.yaml  README.md  pyproject.toml  setup.py
sdk/python/pulumi_outscale/: README.md  __init__.py  _inputs.py  access_key.py  api_access_policy.py  api_access_rule.py  ca.py  client_gateway.py  dhcp_option.py  flexible_gpu.py  flexible_gpu_link.py  get_access_key.py  get_access_keys.py  get_account.py  get_accounts.py  get_api_access_policy.py  get_api_access_rule.py  get_api_access_rules.py  get_ca.py  get_cas.py  get_client_gateway.py  get_client_gateways.py  get_dhcp_option.py  get_dhcp_options.py  get_entities_linked_to_policy.py  get_flexible_gpu.py  get_flexible_gpu_catalog.py  get_flexible_gpus.py  get_image.py  get_image_export_task.py  get_image_export_tasks.py  get_images.py  get_internet_service.py  get_internet_services.py  get_keypair.py  get_keypairs.py  get_load_balancer.py  get_load_balancer_listener_rule.py  get_load_balancer_listener_rules.py  get_load_balancer_tags.py  (+114 more)
sdk/python/pulumi_outscale.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk/python/pulumi_outscale/config/: __init__.pyi  outputs.py  vars.py
(+2427 files in other folders)
