[project]
  name = "pulumi_outscale"
  description = "A Pulumi package for creating and managing outscale cloud resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11,<5; python_version < \"3.11\""]
  keywords = ["pulumi", "outscale", "category/cloud"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "0.0.1a0+dev"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://www.pulumi.com"
    Repository = "https://github.com/outscale/pulumi-outscale"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_outscale = ["py.typed", "pulumi-plugin.json"]
